--- a/ansible/playbook-docker.yml
+++ b/ansible/playbook-docker.yml
@@ -12,7 +12,9 @@
              | sudo gpg --dearmor -o /etc/apt/trusted.gpg.d/docker.gpg
     
     - name: Add Docker repository using add-apt-repository module
-      command: sudo add-apt-repository "deb [arch={{ ansible_architecture }}] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable"
+      apt_repository: 
+        repo: deb [arch=amd64] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable
+        state: present
 
     - name: Update apt package cache again after adding Docker repository
       apt:
@@ -39,4 +41,12 @@
       user :
         name : ubuntu
         groups : docker 
-        append : yes  
+        append : yes 
+
+    - name: Start and enable Docker service
+      service:
+        name: docker
+        enabled: yes
+        state: started
+
+          
